--- a/style.css
+++ b/style.css
@@ -194,6 +194,11 @@ form button{
     padding: 8px 32px;
 }
 
+.form-btns{
+    display: flex;
+
+}
+
 #submit-btn{
     color: white;
     background-color: #111727;
@@ -202,6 +207,7 @@ form button{
 #cancel-btn{
     color: white;
     background-color: red;
+    margin-left: 16px;
 }
 
 
@@ -240,9 +246,23 @@ form button{
     margin: 0 16px;
 
     text-decoration: none;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.project > img{
+.upper-project {
+    display: flex;
+    flex-direction: column;
+}
+
+.lower-project{
+    display: flex;
+    flex-direction: column;
+}
+
+.project .upper-project > img{
     border-radius: 12px;
     height: 300px;
     object-fit: cover;
@@ -251,7 +271,7 @@ form button{
     margin-bottom: 8px;
 }
 
-.project > span { /*  title */
+.project .upper-project > span { /*  title */
     font-weight: bold;
     color: #111727 ;
     
@@ -270,6 +290,7 @@ form button{
 
 .project-logos{
     display: flex;
+    flex-direction: row;
     align-items: center;
     margin: 24px 0;
 }
